Only add java.sql during test compilation Use (test-)jar-no-fork during lifecycle.